--- a/result.css
+++ b/result.css
@@ -23,8 +23,8 @@ body{
 .container{
     border-radius: 1.5em;
     background: white;
-    width: 35%;
-    height: 32%;
+    /* width: 35%;
+    height: 32%; */
     display: flex;
 }
 
@@ -35,7 +35,8 @@ body{
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
-    padding: 20px 0;
+    gap:2em;
+    padding: 30px 0;
 }
 
 .blue-div h2{
@@ -82,7 +83,7 @@ body{
     text-align: center;
     color:rgb(192, 187, 187);
     font-size: 12px;
-    width: 70%;
+    width: 60%;
     font-weight: 600;
 }
 
