--- a/result.css
+++ b/result.css
@@ -23,8 +23,8 @@ body{
 .container{
     border-radius: 1.5em;
     background: white;
-    /* width: 35%;
-    height: 32%; */
+    width: 50%;
+    height: 50%;
     display: flex;
 }
 
@@ -40,15 +40,15 @@ body{
 }
 
 .blue-div h2{
-    font-size: 17px;
+    font-size: 25px;
     color:rgb(195, 192, 192);
 }
 
 .center-title{
     background: #4B25D0;
     border-radius: 100%;
-    height: 130px;
-    width: 130px;
+    height: 55%;
+    width: 70%;
 
     display: flex;
     flex-direction: column;
@@ -59,12 +59,12 @@ body{
 
 .center-title h1{
     color:white;
-    font-size: 40px;
+    font-size: 100px;
 }
 
 .center-title p{
     color:rgb(195, 192, 192);
-    font-size: 12px;
+    font-size: 20px;
 }
 
 .bottom-title{
@@ -76,13 +76,13 @@ body{
 
 .bottom-title h1{
     color:white;
-    font-size: 22px;
+    font-size: 40px;
 }
 
 .bottom-title p{
     text-align: center;
     color:rgb(192, 187, 187);
-    font-size: 12px;
+    font-size: 15px;
     width: 60%;
     font-weight: 600;
 }
@@ -96,8 +96,8 @@ body{
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    gap: 1.5em;
-    padding: 0 25px;
+    gap: 1em;
+    padding: 0 40px;
 }
 
 .white-div > * {
@@ -107,16 +107,17 @@ body{
 .line-div{
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
-    height: 50%;
+    justify-content: center;
+    gap: 1em;
+    height: 65%;
 }
 
 .line-div > div{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 10px 5px;
-    border-radius: 7px;
+    padding: 20px 10px;
+    border-radius: 12px;
 }
 
 .line-div > div p{
@@ -142,7 +143,7 @@ body{
 }
 
 .white-div h1{
-    font-size: 17px;
+    font-size: 22px;
 }
 
 /* LINE DIVS --------------------------------------------------------------------------------------- */
@@ -184,13 +185,14 @@ body{
 a {
     color:white;
     background: #303B59;
-    padding:9px 0;
-    border-radius: 20px;
+    padding:15px 0;
+    border-radius: 25px;
     font-weight: 700;
     font-size: 12px;
     text-align: center;
     text-decoration: none;
     border: none;
+    
 }
 
 a:active{
