--- a/result.css
+++ b/result.css
@@ -198,3 +198,67 @@ a {
 a:active{
     background: green;
 }
+
+/* RESPONSIVE -------------------------------------------------------------------------------------------------------------- */
+/* RESPONSIVE -------------------------------------------------------------------------------------------------------------- */
+/* RESPONSIVE -------------------------------------------------------------------------------------------------------------- */
+/* RESPONSIVE -------------------------------------------------------------------------------------------------------------- */
+
+@media(max-width: 375px){
+
+    body{
+        all:unset;
+    }
+    .container{
+        flex-direction: column;
+        gap: 1em;
+        width: 100%;
+        height: 100%;
+        
+    }
+
+    .blue-div{
+        width: 100%;
+        border-top-left-radius: 0;
+        border-top-right-radius:0;
+
+        gap: 1em;
+    }
+
+    .center-title{
+        width: 50%;
+        height: 170px;
+        line-height: 1.3;
+    }
+
+    .center-title h1{
+        font-size: 60px;
+    }
+
+    .center-title p{
+        font-size: 15px;
+    }
+
+    .white-div{
+        width: 100%;
+        
+    }
+
+    .bottom-title h1{
+        font-size: 35px;
+    }
+
+    .bottom-title p{
+        width: 75%;
+
+    }
+
+    .white-div h1{
+        font-size: 20px;
+    }
+
+    a{
+        margin: 10px 0 30px 0;
+    }
+}
+
